Use packageToModule for boot package lookup